renamed CountDownTimer.html to index.html for github pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Turn on/off light</title>
+  <title>CountDownTimer</title>
 </head>
 <body>
   <script>
@@ -66,6 +66,6 @@
     <p>開/關倒數計時(Sec.)：<span class="span" id="timer">0</span></p>
 
   </div>
-  
+
 </body>
 </html>
